# FriendHub-live

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: build.rs  main.rs
src/chat/: message.rs  mod.rs
src/chat/handler/: mod.rs  namespace.rs  room.rs
src/notifications/: mod.rs  notif.rs  voting.proto
src/utils/: database.rs  mod.rs  wrappers.rs
